# Article-Generation

./: .gitignore  HowToUse.md  ReadMe.md
client/: ReadMe.md  streamlit_app.py
client/pages/: generate_html_page.py
client/utils/: generate_html.py
server/: .env.example  README.md  Setup.md  callback_counts.json  pyproject.toml  requirements.txt
server/app/: server.py  server_test.ipynb
server/helper/: callbacks.py  models.py  prompts.py
server/openai_article_generator/: article_generator.py
server/stablilty_with_cloudinary/: image_generator.py
