[tool.poetry]
name = "article-generator"
version = "0.1.0"
description = "A service where users can utilize AI to generate articles and images based on topic and descriptions."
authors = ["Anurag Ranjan anurag.ranjan@impressico.com"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
